[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/balloon/Main.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 173.982, 0, -173.982, -13, -293, -188.574, 3.36738, 188.574, -3.36738, 280, -597, -4.48423, -161.634, 4.48423, 161.634, 590, -305, 144.798, 1.12246, -144.798, -1.12246, 298, 4, -4.48985, 188.574, 4.48985, -188.574, -13, -293 )
}

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -13, -293 )
rotation = -1.56592

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0.141176, 0.607843, 0.643137, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 100.0
color = Color( 1, 0, 0, 1 )

[node name="CircleCenter" type="Position2D" parent="."]
position = Vector2( 525, 309 )

[node name="CircleRadius" type="Position2D" parent="."]
position = Vector2( 222, 307 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
